delete html files

--- a/views/index.html
+++ b/views/index.html
@@ -1,283 +1,8 @@
 <!DOCTYPE html>
-
-<!-- language of the website -->
-<html lang="en">
-  <!-- Information about the website -->
-  <head>
-    <!-- title -->
-    <title>f o c u s</title>
-    <!-- links and files -->
-    <link rel="stylesheet" href="../style.css" />
-    <link
-      id="favicon"
-      rel="icon"
-      href="https://cdn.glitch.com/8dcd60f5-e159-4b42-a8ec-6541453d821a%2Ffocuslogo%20cropped.png?v=1611155026855"
-      type="image/x-icon"
-    />
-    <!-- viewport and sizing -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Primary Meta Tags for things that don't support open graph -->
-    <meta name="title" content="focus" />
-    <meta
-      name="description"
-      content="Welcome to the Study Group server! This server is for AKIS Year 8 students - but only girls! Please enjoy your time here."
-    />
-    <!-- Open Graph (OG): Facebook, Discord -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://focusgroup.glitch.me/" />
-    <meta property="og:title" content="focus" />
-    <meta
-      property="og:description"
-      content="Welcome to the Study Group server! This server is for AKIS Year 8 students - but only girls! Please enjoy your time here."
-    />
-    <meta property="og:image" content="" />
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://focusgroup.glitch.me/" />
-    <meta property="twitter:title" content="focus" />
-    <meta
-      property="twitter:description"
-      content="Welcome to the Study Group server! This server is for AKIS Year 8 students - but only girls! Please enjoy your time here."
-    />
-    <meta property="twitter:image" content="" />
-  </head>
-
-  <!-- main part of the html -->
-
-  <!-- where all the main code goes -->
+<html>
   <body>
-    <!-- side navigation -->
-    <div id="mySidenav" class="sidenav" style="z-index:10">
-      <!-- x icon -->
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
-      <!-- links -->
-      <a href="https://akis.glitch.me">Home</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
-    </div>
-
-    <!-- overlay for sidenav -->
-    <div id="overlay" style="z-index:9"></div>
-
-    <!-- header bar -->
-    <div class="header">
-      <!-- add a hamburger icon -->
-      <span
-        style="font-size:35px;cursor:pointer"
-        onclick="openNav()"
-        title="navigation"
-        >&#9776;</span
-      >
-    </div>
-
-    <!-- main content and everything not headers -->
-    <div id="main">
-      <div class="content">
-        <!-- heading -->
-        <div class="heading">
-          <!-- title -->
-          <h1
-            class="centre"
-            style="font-size:120px;color:white;text-shadow:none;"
-          >
-            focus
-          </h1>
-          <!-- JOIN NOW button -->
-          <p class="centre">
-            <a
-              href="https://akis.page.link/discord"
-              id="hb"
-              style="font-family:Montserrat"
-              >JOIN NOW!</a
-            >
-          </p>
-        </div>
-
-        <!-- content that is not a title -->
-        <div>
-          <!-- introduction -->
-          <div class="div1" style="padding-bottom:50px">
-            <h4 class="centre margin">
-              WELCOME TO THE SERVER
-            </h4>
-            <h3 class="centre" style="font-weight:normal; color:#00c994">
-              Welcome to the Study Group server! <br />
-              This server is for AKIS Year 8 students - but only girls! <br />
-              Please enjoy your time here. <br />
-            </h3>
-          </div>
-
-          <!-- title: rules -->
-          <div class="div2">
-            <!-- heading -->
-            <h1 class="centre margin2" style="color:black">
-              rules
-            </h1>
-
-            <!-- content -->
-            <div class="row">
-              <!-- no nsfw obviously -->
-              <div class="column">
-                <h4 class="centre margin">
-                  NO NSFW OBVIOUSLY
-                </h4>
-                <p class="centre margin2">
-                  None of us like NSFW, and we want to keep it that way. Don't
-                  post anything inappropriate that you wouldn't show to your
-                  parents.
-                </p>
-              </div>
-              <!-- don't abuse swearing -->
-              <div class="column">
-                <h4 class="centre margin">
-                  DON'T ABUSE SWEARING
-                </h4>
-                <p class="centre margin2">
-                  Swearing is fine, but don't overuse it. Some people may be
-                  uncomfortable with this, so please lessen it.
-                </p>
-              </div>
-              <!-- be considerate of others -->
-              <div class="column">
-                <h4 class="centre margin">
-                  BE CONSIDERATE OF OTHERS
-                </h4>
-                <p class="centre margin2">
-                  Most rules are bendable, but once someone tells you to stop,
-                  stop immediately to avoid arguments.
-                </p>
-              </div>
-            </div>
-            <!-- content -->
-            <div class="row">
-              <!-- ping only when necessary -->
-              <div class="column">
-                <h4 class="centre margin">
-                  PING ONLY WHEN NECESSARY
-                </h4>
-                <p class="centre margin2">
-                  Nobody likes a phone that annoys your ears with pings. Lessen
-                  pinging, and ping the correct roles only.
-                </p>
-              </div>
-              <!-- do not spam -->
-              <div class="column">
-                <h4 class="centre margin">
-                  DO NOT SPAM
-                </h4>
-                <p class="centre margin2">
-                  Spamming may be okay if there's nobody there, but spam may
-                  flood the chat. 10 lines of similar content is considered
-                  spam.
-                </p>
-              </div>
-              <!-- use common sense -->
-              <div class="column">
-                <h4 class="centre margin">
-                  USE COMMON SENSE
-                </h4>
-                <p class="centre margin2">
-                  If a rule isn't stated here, that doesn't mean it's
-                  automatically allowed. If you think that it's wrong, don't do
-                  it unless you ask.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="div1">
-            <!-- heading -->
-            <h1 class="centre margin2" style="color:black">
-              features
-            </h1>
-
-            <!-- content -->
-            <div class="row">
-              <!-- no nsfw obviously -->
-              <div class="column">
-                <img
-                  src="https://cdn.glitch.com/7ade236d-688c-4b3c-b85c-6c87cd063ae3%2Ffriends.webp?v=1611458509780"
-                  alt="friends greeting each other"
-                  class="circle centreimg margin"
-                  style="width:60%"
-                />
-                <h4 class="centre margin">
-                  CHAT WITH FRIENDS
-                </h4>
-                <p class="centre margin2">
-                  All we are is skin and bone, trained to get along. We're a
-                  community of friends.
-                </p>
-              </div>
-              <!-- don't abuse swearing -->
-              <div class="column">
-                <img
-                  src="https://cdn.glitch.com/7ade236d-688c-4b3c-b85c-6c87cd063ae3%2Fbooks.webp?v=1611458509825"
-                  alt="books on a shelf"
-                  class="circle centreimg margin"
-                  style="width:60%"
-                />
-                <h4 class="centre margin">
-                  HELP EACH OTHER
-                </h4>
-                <p class="centre margin2">
-                  School is really stressful, but we're always here to help you
-                  out whenever you need it.
-                </p>
-              </div>
-              <!-- be considerate of others -->
-              <div class="column">
-                <img
-                  src="https://cdn.glitch.com/7ade236d-688c-4b3c-b85c-6c87cd063ae3%2Fkeyboard.webp?v=1611458510239"
-                  alt="person typing in a keyboard"
-                  class="circle centreimg margin"
-                  style="width:60%"
-                />
-                <h4 class="centre margin">
-                  ENTERTAINMENT
-                </h4>
-                <p class="centre margin2">
-                  We've got tons of bots and events to keep you entertained at
-                  all times.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- footer -->
-      <footer>
-        <div class="div footer">
-          <h5>
-            Copyright © 2021 focus - all rights reserved
-          </h5>
-          <h5 style="font-weight:normal;float:left">
-            not associated with AKIS nor QatarGas <br />
-            no public sharing
-          </h5>
-        </div>
-      </footer>
-    </div>
-
-    <!-- animations -->
     <script>
-      /* Set the width of the side navigation to 250px and the left margin of the page content to 250px and add a black background color to body */
-      function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
-        document.getElementById("overlay").style.display = "block";
-      }
-
-      /* Set the width of the side navigation to 0 and the left margin of the page content to 0, and the background color of body to white */
-      function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-        document.getElementById("main").style.marginLeft = "0";
-        document.getElementById("overlay").style.display = "none";
-      }
+      window.location.replace("https://akis.glitch.me");
     </script>
   </body>
 </html>
