--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <script>
-      window.location.replace("https://akis.glitch.me");
-    </script>
-  </body>
+    <body>
+        <script>
+            window.location.replace("https://akis.glitch.me")
+        </script>
+    </body>
 </html>
